hphp/hack/test/typecheck/reactive/mutability_flavors7.php.exp
File "mutability_flavors7.php", line 9, characters 5-6:
Inconsistent mutability of local variable, here local is immutable (Typing[4293])
File "mutability_flavors7.php", line 13, characters 5-6:
But here it is mutably-owned
